[package]
name = "wywiwya-rss"
version = "0.1.0"
authors = ["cookie-s <kcz@kcz.sh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.10"
worker = "0.0.9"
serde_json = "1.0.67"
serde = {version = "1.0.136", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
rss = "2.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
