[package]
name = "wywiwya-rss"
version = "0.1.0"
authors = ["cookie-s <kcz@kcz.sh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.11" # https://rustrepo.com/repo/cloudflare-workers-rs
serde_json = "1.0.87"
serde = {version = "1.0.147", features = ["derive"]}
chrono = {version = "0.4.23", features = ["serde"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rss = "2.0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
